maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:9: error: not found: value index
  for (i <- index to width  - 1){
            ^JediEscaper:32: error: reassignment to val
      x = x + 1 // right
        ^JediEscaper:34: error: reassignment to val
      y = y - 1 // top
        ^JediEscaper:38: error: reassignment to val
      x = x + 1 //right
        ^JediEscaper:40: error: reassignment to val
      x = x - 1 // left
        ^